# rvvm-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
examples/: attach.rs  known_layout.rs
src/: cpu_handle.rs  declmacro.rs  dest_ptr.rs  error.rs  instance.rs  internal_utils.rs  lib.rs  prelude.rs  reg.rs  rw_event.rs  types.rs  utils.rs
src/builders/: instance.rs  mod.rs
src/builders/dev/: mmio.rs
src/dev/: ext.rs  handle.rs  mmio.rs  mmio_type.rs  mod.rs  type_.rs
src/fdt/: add.rs  borrowed.rs  error.rs  mod.rs  owned.rs  search.rs
src/tests/: device.rs  utils.rs
tools/bare-metal/: Makefile  README.md  entry.S  hello.c  linker.ld  shell.nix
