[package]
name = "rvvm"
version = "0.2.1"
edition = "2021"

readme = "README.md"
license-file = "LICENSE"

[profile.release]
lto = true
opt-level = 3

[[bin]]
name = "rvvmrs"
path = "bin/main.rs"

[workspace]
members = ["packages/*"]

[workspace.dependencies]
thiserror = "1.0.38"
integral-enum = "1.2.1"
static_assertions = "1.1.0"

[dependencies]
rvvm-sys = { version = "0.1.0", path = "packages/rvvm-sys" }

integral-enum = { workspace = true }
thiserror = { workspace = true }
static_assertions = { workspace = true }
