[package]
name = "rvvm"
version = "0.2.5"
edition = "2021"

readme = "README.md"
license-file = "LICENSE"
authors = ["Nero (kvxmmu)"]
description = "idiomatic RVVM Rust bindings"

repository = "https://github.com/RVVM-rs/rvvm"

[profile.release]
lto = true
opt-level = 3

# [[bin]]
# name = "rvvmrs"
# path = "bin/main.rs"

[workspace]
members = ["packages/*"]

[workspace.dependencies]
thiserror = "1.0.38"
integral-enum = "1.2.1"
static_assertions = "1.1.0"

[features]
default = []
dynamic = ["rvvm-sys/dynamic"]

[dependencies]
rvvm-sys = { version = "1.1.2", path = "packages/rvvm-sys" }
rvvm-macro = { version = "0.1.0", path = "packages/rvvm-macro" }

integral-enum = { workspace = true }
thiserror = { workspace = true }
static_assertions = { workspace = true }
paste = "1.0.11"
